# validate-xunit-xml

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
validate_xunit_xml/: validate_xunit.py
validate_xunit_xml/schemas/: junit-10.xsd
