[metadata]
name = validate_xunit_xml
version = 1.0.0
description = Program to validate/fix xUnit XML files to be compatible with Jenkins xUnit plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryankwilliams/validate-xunit-xml
author = Ryan Williams
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    xmlschema
python_requires = >=3.9
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    validate-xunit-xml = validate_xunit_xml.validate_xunit:cli

[options.package_data]
* = schemas/*.xsd, py.typed

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
